--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -7,8 +8,8 @@ android {
         applicationId "fr.thomaslesciellour.wakeupphone"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
     buildTypes {
         release {
@@ -17,7 +18,7 @@ android {
         }
         debug {
             resValue "string", "app_name", "WUP-Debug"
-            applicationIdSuffix ".debug"
+            //applicationIdSuffix ".debug"
         }
     }
 }
@@ -27,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
 }
